--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a human being.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Shelton, CT</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming, listening to music, coding.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Streamer/content creator</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Shelton, CT</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To make $$$.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/idksecret">Github</a></li>
         </ul>
     </footer>
 </body>
